import React from 'react'
import { shallow } from 'enzyme'
import Title from './Title'
import { ThemeContext } from '../useTheme'

describe('Title', () => {
  it(`should display children`, () => {
    expect(shallow(<Title>content</Title>).getElement()).toMatchSnapshot()
  })

  it(`should extend className`, () => {
    expect(
      shallow(<Title className="noPaddingBottom">content</Title>).getElement()
    ).toMatchSnapshot()
  })

  it(`should handle theme`, () => {
    expect(
      shallow(
        <ThemeContext.Provider theme="primary">
          <Title>content</Title>
        </ThemeContext.Provider>
      ).getElement()
    ).toMatchSnapshot()
  })
})
